--- a/src/main/resources/templates/inmuebles/detail.html
+++ b/src/main/resources/templates/inmuebles/detail.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title th:text="${title}">Detalle Inmueble</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" th:href="@{/css/custom.css}">
-</head>
+<head th:replace="~{layout/base :: head(${title})}"></head>
 <body>
     <div th:replace="~{layout/base :: navbar}"></div>
     <div th:replace="~{layout/base :: messages}"></div>
