--- a/src/main/resources/templates/inmuebles/list.html
+++ b/src/main/resources/templates/inmuebles/list.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title th:text="${title}">Listado de Inmuebles</title>
-    
-    <!-- CSS Links -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" th:href="@{/css/custom.css}">
-    <link rel="stylesheet" th:href="@{/css/layout.css}">
-    <link rel="stylesheet" th:href="@{/css/filters.css}">
-    <link rel="stylesheet" th:href="@{/css/tables.css}">
-    <link rel="stylesheet" th:href="@{/css/cards.css}">
-</head>
+<head th:replace="~{layout/base :: head(${title})}"></head>
 <body>
     <div th:replace="~{layout/base :: navbar}"></div>
     <div th:replace="~{layout/base :: messages}"></div>
@@ -117,7 +105,7 @@
                             </div>
                             
                             <div th:if="${!inmuebles.isEmpty()}" class="table-responsive">
-                                <table class="table table-hover table-striped">
+                                <table class="table table-striped">
                                     <thead>
                                         <tr>
                                             <th class="sortable-header" th:onclick="'ordenarPor(\'id\')'">ID <i class="bi sort-icon" th:classappend="${sortBy == 'id'} ? (${sortDir == 'asc'} ? 'bi-sort-up' : 'bi-sort-down') : 'bi-arrow-down-up'"></i></th>
